# kiyocppstarted

./: CMakeLists.txt  Dockerfile  README.md
cmake/: CompilerWarnings.cmake
src/: CMakeLists.txt  clientMain.cpp  serverMain.cpp
src/client/: clientclass.cpp  clientclass.h
src/server/: serverclass.cpp  serverclass.h
test/: CMakeLists.txt
tools/: build.sh  clangTidy.sh  debug.sh  emscriptenBuild.sh  reindexRtags.sh  start.sh
